fix table wrap on tabs

--- a/webui/static/base_style_v15.css
+++ b/webui/static/base_style_v15.css
@@ -114,6 +114,10 @@ h1, h2, h3, h4, h5, h6 {
     .menubar {
         flex-wrap: wrap;
     }
+
+    .container {
+        margin: 0 8px;
+    }
 }
 
 .menubar .dropdown > li > a {
